# grief-counseling

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
grief_counseling/: __init__.py  agent.py  cli.py  config.py  core.py  ui.py
grief_counseling/templates/: main.j2
grief_counseling/utils/: client.py  prompter.py
tests/: conftest.py  test_agent.py  test_core.py
